<resources>
    <string name="auth_title_text">Авторизация в приложении</string>
    <string name="password_recovery_text">Восстановление пароля</string>
    <string name="we_will_sent_your_pass_text">Мы вышлем вам на почту ссылку для восстановления</string>
    <string name="your_email">Ваша почта</string>
    <string name="email_text">Эл.почта</string>
    <string name="password_text">Пароль</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="your_password">Ваш пароль</string>
    <string name="authorize_text">Авторизоваться</string>
    <string name="auth_error_text">Пароль и/или эл.почта введены\nневерно</string>
    <string name="email_error_text">Введите эл.почту</string>
    <string name="back_text">Назад</string>
    <string name="leave_text">Выйти</string>
    <string name="restore_text">Восстановить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pass_link_sent_title_text">На вашу почту было выслано письмо с дальнейшей инструкцией</string>
    <string name="go_by_link_for_conformation_text">Перейдите по ссылке в письме и следуйте дальнейшим инструкциям</string>
    <string name="ok_text">Ок</string>
    <string name="lesson_menu_text">Занятие</string>
    <string name="schedule_menu_text">Расписание</string>
    <string name="profile_menu_text">Профиль</string>
    <string name="to_beginning_of_lesson_text">К началу занятия</string>
    <string name="doctor_text">Врач</string>
    <string name="coach_text">Главный тренер</string>
    <string name="instructor_text">Инструктор</string>
    <string name="coach_2_text">Тренер</string>
    <string name="your_pulse_text">Ваш пульс</string>
    <string name="minim">миним.</string>
    <string name="mid">сред.</string>
    <string name="max">макс.</string>
    <string name="soon_will_start">Скоро начнётся</string>
    <string name="finished">Закончилось</string>
    <string name="make_appointment">Записаться на занятие</string>
    <string name="no_next_lesson">Следующее занятие отсутствует</string>
    <string name="dont_show_yourself">Не показывать себя</string>
    <string name="show_yourself">Включить видео</string>
    <string name="question_to_instructor">Вопрос инструктору</string>
    <string name="question_to_coach">Вопрос тренеру</string>
    <string name="question_from_instructor">Вы ждете ответ от инструктора</string>
    <string name="question_from_coach">Вы ждете ответ от тренера</string>
    <string name="conversation_with_coach">Проходит общение с тренером</string>
    <string name="conversation_with_instructor">Проходит общение с инструктором</string>
    <string name="are_you_sure_you_wanna_leave">Вы действительно хотите выйти из занятия?</string>
    <string name="cancel_text">Отмена</string>
    <string name="yes_leave_text">Да, выйти</string>
    <string name="question_title_text">Занятие завершено</string>
    <string name="question_subtitle_text">Пожалуйста ответьте на несколько вопросов о вашем самочувствии</string>
    <string name="to_questions">Перейти к вопросам</string>
    <string name="question_number">Вопрос</string>
    <string name="thanks_for_answering">Спасибо что ответили на вопросы</string>
    <string name="doctor_and_instructor_will_read">Доктор и инструктор учтут ваши ответы в разработке программы следующих занятий</string>
    <string name="good">Хорошо</string>
    <string name="to_next_question">Далее</string>
    <string name="mark_text">Оценка</string>
    <string name="from_text">из</string>
    <string name="chose_one_of_variants">Выберите один из предложенных вариантов ниже</string>
    <string name="comment">Комментарий</string>
    <string name="leave_your_comment">Оставьте ваш комментарий</string>
    <string name="write_here">Напишите тут...</string>
    <string name="com_doctor">Коммент. врача</string>
    <string name="com_main_coach">Коммент. глав.тренера</string>
    <string name="com_instructor">Коммент. инструктора</string>
    <string name="com_coach">Коммент. тренера</string>
    <string name="common_data">Общие данные</string>
    <string name="are_you_sure_you_wanna_leave_account">Вы действительно хотите выйти из аккаунта?</string>
    <string name="height_text">Рост (см) *</string>
    <string name="weight_text">Вес (кг) *</string>
    <string name="age_text">Возраст *</string>
    <string name="sex_text">Пол *</string>
    <string name="male_text">Мужской</string>
    <string name="female_text">Женский</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_surname">Ваша фамилия</string>
    <string name="nozoology_text">Нозология *</string>
    <string name="file_text">Выписка или карта пациента *</string>
    <string name="name_text">Имя *</string>
    <string name="surname_text">Фамилия *</string>
    <string name="delete_text">Удалить файл</string>
    <string name="additional_posibilities">Дополнительные данные (особенности)</string>
    <string name="additional_hint">Дополлнительные особенности</string>
    <string name="submit_text">Сохранить изменения</string>
    <string name="goal_text">Цель *</string>
    <string name="promocodes">Промокоды</string>
    <string name="promocode_name">Название промокода</string>
    <string name="date_has_passed">Срок истёк</string>
    <string name="add_promocode">+ Добавить промокод</string>
    <string name="new_promo">Новый промокод</string>
    <string name="insert_code">Введите код</string>
    <string name="code_text">Код</string>
    <string name="add_promo_text">Добавить</string>

</resources>